--- a/VINS-Fusion/loop_fusion/CMakeLists.txt
+++ b/VINS-Fusion/loop_fusion/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
     roslib
     )
 
-find_package(OpenCV)
+find_package(OpenCV 4.5.5 REQUIRED)
 
 
 find_package(Ceres REQUIRED)
